data/derived/fa15/progs/unify/prog0136.ml.out
Characters 141-145:
  let seen' = if List.mem h seen then seen else seen::h in
                                                ^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
